--- a/android/2ne1monitor/app/src/main/res/layout/activity_main.xml
+++ b/android/2ne1monitor/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 		android:id="@+id/app_toolbar"
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
-		android:background="@color/teal_200"
+		android:background="@color/titlebar"
 		android:elevation="4dp" />
 
 	<WebView
