launcher icon and toolbar icon is changed.

--- a/android/2ne1monitor/app/src/main/res/layout/activity_main.xml
+++ b/android/2ne1monitor/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,10 @@
 		android:layout_height="?attr/actionBarSize"
 		android:background="@color/titlebar"
 		android:elevation="4dp" />
+		<ImageView
+    		android:layout_width="192px"
+    		android:layout_height="192px"
+    		android:src="@mipmap/ic_launcher_foreground" /> />
 
 	<WebView
 		android:id="@+id/webView"
