remote ui android app is changed to korean language. tested widely with new_session_dialog and url_change_dialog using test/producer and build/pico_http_server.

--- a/android/2ne1monitor/app/src/main/res/menu/appbar_action.xml
+++ b/android/2ne1monitor/app/src/main/res/menu/appbar_action.xml
@@ -4,6 +4,9 @@
     <item android:id="@+id/action_new_session"
           android:title="@string/new_session"
           app:showAsAction="never"/>
+    <item android:id="@+id/action_url"
+          android:title="@string/url"
+          app:showAsAction="never"/>
     <item android:id="@+id/action_about"
           android:title="@string/about"
           app:showAsAction="never"/>
